// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard should match the snapshot 1`] = `
<main>
  <Connect(CardContainer)
    dataKey="tickets"
  />
  <CreateItem />
</main>
`;

exports[`Dashboard should match the snapshot if location is resources 1`] = `
<main>
  <Connect(CardContainer)
    dataKey="resources"
  />
  <CreateItem />
</main>
`;
